src/api/server/kubernetes/maxiar-dotnetstarterkit-webapi.yaml
---
# Source: maxiar-dotnetstarterkit-webapi/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maxiar-dotnetstarterkit-webapi
  labels:
    helm.sh/chart: maxiar-dotnetstarterkit-webapi-2.0.0
    app.kubernetes.io/name: maxiar-dotnetstarterkit-webapi
    app.kubernetes.io/instance: maxiar-dotnetstarterkit-webapi
    app.kubernetes.io/version: "v2.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: microservice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: maxiar-dotnetstarterkit-webapi
    app.kubernetes.io/instance: maxiar-dotnetstarterkit-webapi
---
# Source: maxiar-dotnetstarterkit-webapi/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maxiar-dotnetstarterkit-webapi
  labels:
    helm.sh/chart: maxiar-dotnetstarterkit-webapi-2.0.0
    app.kubernetes.io/name: maxiar-dotnetstarterkit-webapi
    app.kubernetes.io/instance: maxiar-dotnetstarterkit-webapi
    app.kubernetes.io/version: "v2.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: maxiar-dotnetstarterkit-webapi
      app.kubernetes.io/instance: maxiar-dotnetstarterkit-webapi
  template:
    metadata:
      annotations:
        checksum/config: 1ee314232b8bc754b52527ecc391892cc421dea78ad63bfae6bf24ae7621fb59
        checksum/secret: e4e5ec6968ce8e1ffb0b15f5623ddfef1574c67f4b47c54a71af37bb5d3e2d97
        checksum/configdataseed: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        kubectl.kubernetes.io/default-container: maxiar-dotnetstarterkit-webapi
      labels:
        app.kubernetes.io/name: maxiar-dotnetstarterkit-webapi
        app.kubernetes.io/instance: maxiar-dotnetstarterkit-webapi
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: maxiar-dotnetstarterkit-webapi
            app.kubernetes.io/instance: maxiar-dotnetstarterkit-webapi
      imagePullSecrets:
        - name: maxiar-dotnetstarterkit-webapi-artifactorycredentialsobo
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: maxiar-dotnetstarterkit-webapi
          #command: ['sh', '-c', 'echo listing dataseed folders; ls -la /app/config ; ls -la /app/config/dataseed ; sleep 3600']
          securityContext:
            {}
          image: "ghcr.io/maxiar/webapi:latest:v2.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 30
            periodSeconds: 30
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 5m
              memory: 128Mi
          volumeMounts:
          - name: config-dataseed-final
            mountPath: /app/config/dataseed/
      volumes:
        - name: config-dataseed-final
          emptyDir: {}
        - name: dataseedconfig
          configMap:
            name: maxiar-dotnetstarterkit-webapi-dataseed-files
            defaultMode: 0777
            items:
---
# Source: maxiar-dotnetstarterkit-webapi/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maxiar-dotnetstarterkit-webapi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
      - dotnetstarterkitwebapi.ingress.lab.maxiar.dev
      secretName: dotnetstarterkitwebapi.ingress.lab.maxiar.dev-tls
  rules:
    - host: dotnetstarterkitwebapi.ingress.lab.maxiar.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maxiar-dotnetstarterkit-webapi
                port:
                  number: 80
